--- a/app/src/main/res/layout/activity_cad_familia.xml
+++ b/app/src/main/res/layout/activity_cad_familia.xml
@@ -1,56 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <EditText android:id="@+id/edtNome"
+        <EditText
+            android:id="@+id/edtNome"
+            android:hint="Nome da Família"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/edtDocumento"
+            android:hint="Documento (CPF/CNPJ)"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nome do chefe da família" />
+            android:layout_marginTop="8dp" />
 
-        <EditText android:id="@+id/edtDocumento"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Documento"
-            android:inputType="text" />
-
-        <EditText android:id="@+id/edtEndereco"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <EditText
+            android:id="@+id/edtEndereco"
             android:hint="Endereço"
-            android:inputType="textPostalAddress" />
-
-        <EditText android:id="@+id/edtContato"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
+
+        <EditText
+            android:id="@+id/edtContato"
             android:hint="Contato"
-            android:inputType="phone" />
-
-        <EditText android:id="@+id/edtDependentes"
+            android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Dependentes" />
+            android:layout_marginTop="8dp" />
 
-        <EditText android:id="@+id/edtObservacoes"
+        <EditText
+            android:id="@+id/edtDependentes"
+            android:hint="Número de Dependentes"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
+
+        <EditText
+            android:id="@+id/edtObservacoes"
             android:hint="Observações"
-            android:minLines="3"
-            android:inputType="textMultiLine" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
 
         <Button
             android:id="@+id/btnSalvar"
+            android:text="Salvar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Salvar"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#333333"
-            android:textColor="#FFFFFF"/>
+            android:layout_marginTop="16dp" />
+
     </LinearLayout>
+
 </ScrollView>
