--- a/app/src/main/res/layout/activity_ong_dashboard.xml
+++ b/app/src/main/res/layout/activity_ong_dashboard.xml
@@ -1,88 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="24dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
-
-    <TextView
-        android:id="@+id/txtBemVindo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bem Vindo"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/txtNomeOng"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nome da Ong"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/txtBemVindo"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/btnFamilias"
-        android:layout_width="wrap_content"
+        android:background="#DDDDDD"
+        android:padding="16dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/txtNomeOng"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:src="@drawable/ic_launcher_foreground" />
+        android:layout_marginBottom="16dp">
 
         <TextView
+            android:text="Famílias"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Famílias" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/btnEstoques"
-        android:layout_width="wrap_content"
+        android:background="#DDDDDD"
+        android:padding="16dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/btnFamilias"
-        app:layout_constraintStart_toEndOf="@id/btnFamilias"
-        android:layout_marginStart="16dp">
-
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:src="@drawable/ic_launcher_foreground" />
+        android:layout_marginBottom="16dp">
 
         <TextView
+            android:text="Estoque"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Estoques" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/btnDoacao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/btnFamilias"
-        app:layout_constraintStart_toEndOf="@id/btnEstoques"
-        android:layout_marginStart="16dp">
-
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:src="@drawable/ic_launcher_foreground" />
+        android:background="#DDDDDD"
+        android:padding="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
+            android:text="Doações"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Doações" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
